# humanoid_manipulator

./: CMakeLists.txt  README.md  package.xml
config/: display.rviz  ros_param.yaml
include/module/: ik_module.hpp  motion_editor.hpp
include/node/: main_node.hpp
launch/: auto_mode.launch.py  debug_mode.launch.py  teleop_mode.launch.py
motion/: ball.yaml  ball2.yaml  ball3.yaml  ball3_original.yaml  grip.yaml  init.yaml
robot_model/: humanoid_mani.srdf  humanoid_mani.urdf
robot_model/meshes/: Head_1.stl  base_link.stl  ee_link_1.stl  eye_1.stl  forearm_1.stl  shoulder_1.stl  torso_1.stl  upperarm_1.stl
src/module/: ik_module.cpp  motion_editor.cpp
src/node/: main_node.cpp  teleop_node.cpp
